update python encoding error note

--- a/python-encoding-error-note.ipynb
+++ b/python-encoding-error-note.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "## `unicode`和`bytes`\n",
     "\n",
-    "如果`type(字符串)`显示结果是`str`，那么就是指的`bytes`二进制码。\n",
+    "如果`type(字符串)`显示结果是`str`，那么就是指的`bytes`字节码。\n",
     "而其它各种我们所说的`utf-8`，`gb2312`等等也都是Unicode的不同实现方式。\n",
     "这里不要去考虑那么复杂，只要先记住这两大阵营就行。\n",
     "\n",
@@ -307,7 +307,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> 上面看到，从文件读取出来的，就是bytes二进制格式。\n",
+    "> 上面看到，从文件读取出来的，就是bytes字节码格式。\n",
     "那么如果要把bytes转化为unicode，就要解码，也就是decoding."
    ]
   },
@@ -445,7 +445,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> 这样就明白了：除了r.text返回的内容外，其它几乎都是使用str格式，也就是bytes二进制码。所以我们只要转化requests相关的内容就行！\n",
+    "> 这样就明白了：除了r.text返回的内容外，其它几乎都是使用str格式，也就是bytes字节码。所以我们只要转化requests相关的内容就行！\n",
     "\n",
     "实际上，requests返回的response中, 除了用`response.text`获取内容，\n",
     "我们还可以用`response.content`获取同样的内容，`.content`返回的是bytes格式。\n",
@@ -554,253 +554,62 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 再来试一个从网上获取json并又存到本地文件的例子"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 261,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": [
-    "import requests,json\n",
-    "\n",
-    "r = requests.get('https://api.github.com/repos/solomonxie/\\\n",
-    "solomonxie.github.io/issues/25/comments')\n",
-    "\n",
-    "# 获取到我的github中某条issue的所有评论，形式为<JSON格式的字符串>\n",
-    "comments = json.loads( r.content )\n",
-    "\n",
-    "# 取某一条评论查看内容（中文）\n",
-    "cc = comments[0]['body'][0:10] # 取出的内容是'## 配置：先从配置'"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(u'## \\u914d\\u7f6e\\uff1a\\u5148\\u4ece\\u914d\\u7f6e', unicode)"
-      ]
-     },
-     "execution_count": 359,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "cc, type(cc)\n",
-    "\n",
-    "# 可以看到输出的是<unicode格式的字符串> 注：这时如果用print是能正常出中文的"
+    "## 顺便，我们再来测试一下网上各种解决方法的可靠性"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 好，到这里先停一下！\n",
-    "JSON的读取到目前为止，都是正常的：JSON Object对象给出的值都是unicode，没有被莫名转义，也没有报错误。\n",
-    "> 但是，unicode格式，意味着它和str格式不兼容！\n",
-    "这时，害羞的大姑娘Unicode刚出炉，你不能在这个时候让它和Str操作在一起！\n",
-    "报错也往往就在这种疏于防备的时候！\n",
-    "\n",
-    "比如你看："
+    "### 1.  `chardet库`的方法"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 ## 配置：先从配置显性声明的字符串\n",
-      "2 ## 配置：先从配置显性声明的字符串\n",
-      "3"
-     ]
-    },
-    {
-     "ename": "UnicodeDecodeError",
-     "evalue": "'ascii' codec can't decode byte 0xe6 in position 0: ordinal not in range(128)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnicodeDecodeError\u001b[0m                        Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-371-41866659ac68>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'utf-8'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'显性声明的字符串'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcc\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'显性声明的字符串'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'utf-8'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcc\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'显性声明的字符串'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mUnicodeDecodeError\u001b[0m: 'ascii' codec can't decode byte 0xe6 in position 0: ordinal not in range(128)"
-     ]
-    }
-   ],
-   "source": [
-    "print 1, cc.encode('utf-8') + '显性声明的字符串'\n",
-    "print 2, cc + '显性声明的字符串'.decode('utf-8')\n",
-    "print 3, cc + '显性声明的字符串'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "上面打印了三条Unicode和Str的结合，\n",
-    "前两条分别是以Str格式的结合，以Unicode格式的结合。\n",
-    "但是第三条，把两个不同格式的字符串结合，就出错了。\n",
-    "\n",
-    "对不起，这里不是Javascript，变量不可以任意交合。Python对变量和编码都是极其谨慎的。\n",
-    "\n",
-    "所以明白了这点，我们再继续。\n",
-    "\n",
-    "### 上面获得了JSON Object对象，那么再来试试将`JSON对象`整体存到文本文件中。\n",
-    "如果要存到本地文件，那么就必须把Object对象转换为Str格式的字符串。\n",
-    "json库自带.dumps()函数可以进行转化。\n",
-    "但是这里问题出现了！我们来小试一下："
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 370,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " {\"body\": \"\\u4f60\\u597d\"}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print json.dumps( {\"body\": \"你好\"} )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> 竟然连`print大法`都不能把`json.dumps()`返回的内容正确打印出来。经过各种测试和查看官网对于此函数的文档，发现：\n",
-    "\n",
-    "### 原来`json.dumps()`是默认所有非ascii码强制转化为代号（而非汉字）的，于`repr()`效果等同！\n",
-    "[官方文档](https://docs.python.org/2/library/json.html#encoders-and-decoders)里有说明，`json.dumps()`里面有个`ensure_ascii`参数，默认为True。\n",
-    "意思就是默认把所有非ascii字码用`\\`强制转化。所以，为了关闭这个功能，我们必须把它设为`False`.\n",
-    "下面是个小测试："
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 394,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'{\"body\": \"\\xe4\\xbd\\xa0\\xe5\\xa5\\xbd\"}'"
+       "{'confidence': 0.7525, 'encoding': 'utf-8', 'language': ''}"
       ]
      },
-     "execution_count": 372,
+     "execution_count": 394,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
     }
    ],
    "source": [
-    "json.dumps({\"body\": \"你好\"}, ensure_ascii=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 这样一来JSON在Python里的编码问题就解决了：须用`json.dumps(obj,  ensure_ascii=False)`来转化为字符串\n",
+    "from chardet import detect\n",
     "\n",
-    "下面是完整的代码测试："
+    "detect('配置')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{\"body\": \"## 配置 <type 'str'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "# @网络资源到本地存储真实测试\n",
-    "import requests,json\n",
-    "\n",
-    "r = requests.get('https://api.github.com/repos/solomonxie/solomonxie.github.io/issues/25/comments')\n",
-    "\n",
-    "# 获取到我的github中某条issue的所有评论，形式为<JSON格式的字符串>\n",
-    "comments = json.loads( r.content )\n",
-    "\n",
-    "outgoing = json.dumps( comments, ensure_ascii=False )\n",
-    "\n",
-    "with open('test.txt', 'w') as f:\n",
-    "    f.write(outgoing.encode('utf-8'))\n",
-    "with open('test.txt', 'r') as f:\n",
-    "    read = f.read()\n",
-    "    \n",
-    "print read[0:20], type(read)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 大功告成！"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 400,
    "metadata": {},
    "outputs": [
     {
@@ -809,50 +618,32 @@
        "{'confidence': 0.505, 'encoding': 'utf-8', 'language': ''}"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 400,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# @1 chardet库的方法\n",
-    "from chardet import detect\n",
-    "detect(b'\\xe9\\x85\\x8d')"
+    "detect('\\xe9\\x85\\x8d') # 检测的内容和 b'配' 等同"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": 172,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "iso-8859-9\n"
-     ]
-    }
-   ],
    "source": [
-    "# @2 由BeautifulSoup制作的UnicodeDammit方法\n",
-    "from bs4 import UnicodeDammit\n",
-    "dammit = UnicodeDammit(\"Sacr\\xc3\\xa9 bleu!\")\n",
-    "print dammit.original_encoding\n",
-    "# 'utf-8'"
+    "### 2. 由BeautifulSoup库提供的UnicodeDammit方法"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 405,
    "metadata": {},
    "outputs": [
     {
@@ -861,126 +652,142 @@
        "u'Sacr\\xc3\\xa9 bleu!'"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 405,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from bs4 import UnicodeDammit\n",
+    "dammit = UnicodeDammit(\"Sacr\\xc3\\xa9 bleu!\")\n",
+    "\n",
     "dammit.unicode_markup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 406,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'iso-8859-9'"
+      ]
+     },
+     "execution_count": 406,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dammit.original_encoding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. `sys.setdefaultencoding('utf-8')`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. `.encode('utf-8').decode('utf-8')`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. `encode('unicode-escape')`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 409,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "ss = '你好'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 408,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\xe4\\xbd\\xa0\\xe5\\xa5\\xbd'"
+      ]
+     },
+     "execution_count": 408,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 410,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sacré bleu!\n"
+      "你好\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'latin-1'"
-      ]
-     },
-     "execution_count": 171,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "dammit = UnicodeDammit(\"Sacr\\xe9 bleu!\", [\"latin-1\", \"iso-8859-1\"])\n",
-    "print(dammit.unicode_markup)\n",
-    "# Sacré bleu!\n",
-    "dammit.original_encoding\n",
-    "# 'latin-1'"
+    "print ss"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
