--- a/python-encoding-json-error-note.ipynb
+++ b/python-encoding-json-error-note.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -44,7 +44,7 @@
        "(u'## \\u914d\\u7f6e\\uff1a\\u5148\\u4ece\\u914d\\u7f6e', unicode)"
       ]
      },
-     "execution_count": 359,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,20 +70,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 ## 配置：先从配置显性声明的字符串\n",
-      "2 ## 配置：先从配置显性声明的字符串\n",
-      "3"
-     ]
-    },
+     "data": {
+      "text/plain": [
+       "'## \\xe9\\x85\\x8d\\xe7\\xbd\\xae\\xef\\xbc\\x9a\\xe5\\x85\\x88\\xe4\\xbb\\x8e\\xe9\\x85\\x8d\\xe7\\xbd\\xae\\xe6\\x98\\xbe\\xe6\\x80\\xa7\\xe5\\xa3\\xb0\\xe6\\x98\\x8e\\xe7\\x9a\\x84\\xe5\\xad\\x97\\xe7\\xac\\xa6\\xe4\\xb8\\xb2'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cc.encode('utf-8') + '显性声明的字符串'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "u'## \\u914d\\u7f6e\\uff1a\\u5148\\u4ece\\u914d\\u7f6e\\u663e\\u6027\\u58f0\\u660e\\u7684\\u5b57\\u7b26\\u4e32'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cc + '显性声明的字符串'.decode('utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
     {
      "ename": "UnicodeDecodeError",
      "evalue": "'ascii' codec can't decode byte 0xe6 in position 0: ordinal not in range(128)",
@@ -91,15 +122,13 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mUnicodeDecodeError\u001b[0m                        Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-371-41866659ac68>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'utf-8'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'显性声明的字符串'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcc\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'显性声明的字符串'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'utf-8'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcc\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'显性声明的字符串'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-12-4d9a96763909>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcc\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'显性声明的字符串'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mUnicodeDecodeError\u001b[0m: 'ascii' codec can't decode byte 0xe6 in position 0: ordinal not in range(128)"
      ]
     }
    ],
    "source": [
-    "print 1, cc.encode('utf-8') + '显性声明的字符串'\n",
-    "print 2, cc + '显性声明的字符串'.decode('utf-8')\n",
-    "print 3, cc + '显性声明的字符串'"
+    "cc + '显性声明的字符串'"
    ]
   },
   {
@@ -187,17 +216,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{\"body\": \"## 配置 <type 'str'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# @网络资源到本地存储真实测试\n",
     "import requests,json\n",
@@ -212,8 +233,45 @@
     "with open('test.txt', 'w') as f:\n",
     "    f.write(outgoing.encode('utf-8'))\n",
     "with open('test.txt', 'r') as f:\n",
-    "    read = f.read()\n",
-    "    \n",
+    "    read = f.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('[{\"body\": \"## \\xe9\\x85\\x8d\\xe7\\xbd\\xae', str)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "read[0:20], type(read)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{\"body\": \"## 配置 <type 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
     "print read[0:20], type(read)"
    ]
   },
@@ -222,136 +280,6 @@
    "metadata": {},
    "source": [
     "## 大功告成！"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 161,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'confidence': 0.505, 'encoding': 'utf-8', 'language': ''}"
-      ]
-     },
-     "execution_count": 161,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# @1 chardet库的方法\n",
-    "from chardet import detect\n",
-    "detect(b'\\xe9\\x85\\x8d')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 172,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "iso-8859-9\n"
-     ]
-    }
-   ],
-   "source": [
-    "# @2 由BeautifulSoup制作的UnicodeDammit方法\n",
-    "from bs4 import UnicodeDammit\n",
-    "dammit = UnicodeDammit(\"Sacr\\xc3\\xa9 bleu!\")\n",
-    "print dammit.original_encoding\n",
-    "# 'utf-8'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 183,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "u'Sacr\\xc3\\xa9 bleu!'"
-      ]
-     },
-     "execution_count": 183,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dammit.unicode_markup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 171,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sacré bleu!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'latin-1'"
-      ]
-     },
-     "execution_count": 171,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dammit = UnicodeDammit(\"Sacr\\xe9 bleu!\", [\"latin-1\", \"iso-8859-1\"])\n",
-    "print(dammit.unicode_markup)\n",
-    "# Sacré bleu!\n",
-    "dammit.original_encoding\n",
-    "# 'latin-1'"
    ]
   }
  ],
