Update from solomonxie

--- a/socket/socket.ipynb
+++ b/socket/socket.ipynb
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-22T05:24:31.593894Z",
-     "start_time": "2018-10-22T05:24:31.587196Z"
+     "end_time": "2018-10-22T05:55:52.269435Z",
+     "start_time": "2018-10-22T05:55:48.661Z"
     }
    },
    "outputs": [],
@@ -29,6 +29,7 @@
     "\n",
     "# Open a socket (UDP)\n",
     "udp_socket = socket.socket(socket.AF_INET, socket.SOCK_DGRAM)\n",
+    "#udp_socket.setsockopt(socket.IPPROTO_IP, socket.IP_MULTICAST_TTL, 2)\n",
     "\n",
     "# Send a UDP socket\n",
     "dest_addr = ('192.168.199.101', 9999)\n",
@@ -47,19 +48,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-22T05:26:03.625613Z",
-     "start_time": "2018-10-22T05:25:50.341538Z"
+     "end_time": "2018-10-22T05:55:52.264744Z",
+     "start_time": "2018-10-22T05:55:46.198108Z"
     }
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(b\"how's it going\", ('127.0.0.1', 56320))\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-47de421821b3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m# Waiting and receiving\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0mrecv_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mudp_socket\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecvfrom\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1024\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;31m# Print when message received\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -71,7 +76,7 @@
     "\n",
     "\n",
     "# Bind port\n",
-    "local_addr = ('127.0.0.1', 9999)\n",
+    "local_addr = ('', 9999)\n",
     "udp_socket.bind(local_addr)\n",
     "\n",
     "# Waiting and receiving\n",
@@ -83,6 +88,13 @@
     "# Close the socket\n",
     "udp_socket.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
